--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <img alt="NodeJs" src="https://img.shields.io/badge/Node.js-43853D?logo=node.js&logoColor=white" > 
                             <img alt="ExpressJs" src="https://img.shields.io/badge/Express.js%20-%23404d59?logo=express&logoColor=whitee" > 
                             <img alt="Django" src="https://img.shields.io/badge/Django-092E20?logo=django&logoColor=white" > </p>
-                        <p> <i class="fas fa-terminal"></i>Databases and cloud hosting: 
+                        <p> <i class="fas fa-terminal"></i>Databases and Cloud Service: 
                             <img src="https://img.shields.io/badge/SQLite-07405E?logo=sqlite&amp;logoColor=white" alt="SQLite" />
                             <img src="https://img.shields.io/badge/MongoDB-4EA94B?logo=mongodb&amp;logoColor=white" alt="Mongdb" />
                             <img src="http://img.shields.io/badge/-MS%20SQL%20Server-CC2927?logo=microsoft-sql-server&amp;logoColor=ffffff" alt="MS SQL Server" />
@@ -266,7 +266,7 @@
                             <img src="https://img.shields.io/badge/Google_Cloud-4285F4?logo=google-cloud&amp;logoColor=white" alt="GC" />
                             <img src="https://img.shields.io/badge/Microsoft_Azure-0089D6?logo=microsoft-azure&amp;logoColor=white" alt="Azure" />                                
                         </p>
-                        <p> <i class="fas fa-terminal"></i>Tool:
+                        <p> <i class="fas fa-terminal"></i>Tools:
                             <img src="https://img.shields.io/badge/Git-100000?logo=git&amp;logoColor=white" alt="Git" />
                             <img src="https://img.shields.io/badge/GitHub-100000?logo=github&amp;logoColor=white" alt="Github" />
                             <img src="http://img.shields.io/badge/-Visual%20Studio%20Code-0078d7?logo=visual-studio-code&amp;logoColor=ffffff" alt="VS Code" />
