--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                           <div class="nav-link" id="programing-tab" data-bs-toggle="tab" data-bs-target="#programing" type="button" role="tab" aria-controls="programing" aria-selected="false">Programing group</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                          <div class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other" type="button" role="tab" aria-controls="other" aria-selected="false">Other</button>
+                          <div class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other" type="button" role="tab" aria-controls="other" aria-selected="false">Others</button>
                         </li>
                       </ul>
                       <div class="tab-content" id="myTabContent">
