--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <p> <i class="fas fa-code-branch"></i> <b>Course projects:</b>  Introduction to Engineering - <i class="fas fa-calendar-week"></i> <b>Year: </b>2017</p>
                                 <p>• Descriptions: Gas detector with speaker.</p>
                                 <p>• Tech stack: Arduino Uno R3, MQ-2 sensor.</p>
-                                <a href="#">
+                                <a href="https://github.com/luuvanduc1999/GasDetector_ArduinoUNO">
                                     <button class="btn btn-success btn-repos">Repository</button>
                                 </a>
                             </div>
