--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
             <!-- Left Panel-->
             <div class="col-12 col-md-8 main-grid">
-                <div class="content-range">
+                <div class="content-range" id="objective">
                     <div class="main-title"><i class="fas fa-bullseye"></i> OBJECTIVE</div>
                     <p style="font-size: 18px; font-style: italic;"> Individual with well-honed skills in data structures and algorithms. Interested in the job of a Software Developer.</p>
                 </div>
-                <div class="content-range">
+                <div class="content-range" id="experience">
                     <div class="main-title"><i class="fas fa-play"></i> EXPERIENCE</div>
                     <div class=content-main> 
                         <p> <b><i class="fas fa-history"></i> FPT Software </b> </p>
@@ -99,7 +99,8 @@
                         <p> <i class="fas fa-code-branch"></i>  <i> Designer</i>
                         <p>Duration: 2017-2019</p>
                     </div>
-
+                </div>
+                <div class="content-range" id="project">
                     <div class="main-title"> <i class="fas fa-play"></i> PROJECTS</div>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item" role="presentation">
@@ -187,7 +188,7 @@
                 </div>
 
                 <!-- CERTIFICATE-->
-                <div class="content-range">
+                <div class="content-range" id="certificate">
                     <div class="main-title"><i class="fas fa-play"></i> CERTIFICATE</div>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item" role="presentation">
