--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="vi">
 
 <head>
-    <title>Resume | LuuVanDuc</title>
+    <title>Portfolio | LuuVanDuc</title>
     <link rel="icon" href="/static/img/logo.png">
     <meta charset="utf-8" />
-    <meta name="description" content="This is resume of me, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
+    <meta name="description" content="This is portfolio of me, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
     <meta property="og:image" content="/static/img/thumb.png">
