--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <img alt="C#" src="https://img.shields.io/badge/C%23-239120?style=flat-square&logo=c-sharp&logoColor=white" > 
                             <img alt="Arduino" src="https://img.shields.io/badge/-Arduino-00979D?style=flat-square&logo=Arduino&logoColor=white" > 
                             <img alt="Python" src="https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=python&logoColor=white" > 
-                            <img alt="Java" src="https://img.shields.io/badge/-Java-ED8B00?style=flat-square&logo=Java&logoColor=white" > 
+                            <img alt="Java" src="https://img.shields.io/badge/-Java-ED8B00?style=flat-square&logo=Java&logoColor=black" > 
                             <img alt="Js" src="https://img.shields.io/badge/JavaScript-F7DF1E?&style=flat-square&logo=javascript&logoColor=black" >  
                         </p>
                         <p> <i class="fas fa-terminal"></i>Frontend: <br>
