--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Portfolio | LuuVanDuc</title>
+    <title>Portfolio | Duc Luu Van</title>
     <link rel="icon" href="/static/img/logo.png">
     <meta charset="utf-8" />
     <meta name="description" content="This is portfolio of me, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
@@ -395,7 +395,7 @@
         </div>
     </div>
     <div class="foot">
-        © Designed by LuuVanDuc, 2021
+        © Designed by Duc Luu Van, 2021
     </div>
 </body>
 
