--- a/Monday-to-PowerBI.html
+++ b/Monday-to-PowerBI.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>SET | GetTeamsCode</title>
+    <title>Monday to PowerBI</title>
     <link rel="icon" href="/static/img/logo.png">
     <meta charset="utf-8" />
     <meta name="description" content="Công cụ import Monday to PowerBI.">
