--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -94,7 +94,7 @@
 
     <div class="main container-fluid">
         <div class="card text-dark border-success bg-warning">
-            <div class="card-header">Get MSTeams Code</div>
+            <div class="card-header">Get MSTeams Code v1.2.211108</div>
             <div class="card-body">
                 <h5 class="card-title"><b>Công cụ lấy code Teams theo mã lớp</b></h5>
                 <p class="card-text">Hiện chỉ hỗ trợ viện CNTT và ĐTVT, lất mã lớp để tra HP bằng QLĐT.
