--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -115,7 +115,7 @@
                             <label for="exampleFormControlInput1" class="form-label">Kỳ học</label>
                             <select id="kyhoc" class="form-select" aria-label="Default select example">
                                 <option selected>Hãy chọn</option>
-                                <option value="20192">20192</option>
+                                <option value="20192">20192</option>ren
                                 <option value="20202">20202</option>
                                 <option value="20203">20203</option>
                                 <option value="20211">20211</option>
