--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
                 <div class="content-range" id="experience">
                     <div class="main-title"><i class="fas fa-play"></i> EXPERIENCE</div>
                     <div class=content-main> 
+                        <p> <b><i class="fas fa-history"></i> akaBot </b> </p>
+                        <p> <i class="fas fa-code-branch"></i>  <i> RPA Developer</i>
+                        <p> <i class="fas fa-tasks"></i> Ubot Invoice
+                        <p>Duration: 10/2021-Now</p>
+                    </div>
+                    <div class=content-main> 
                         <p> <b><i class="fas fa-history"></i> FPT Software </b> </p>
                         <p> <i class="fas fa-code-branch"></i>  <i> Intern: C++</i>
                         <p>Duration: 7/2020-8/2020</p>
