update vien dien

--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -109,6 +109,7 @@
                                 <option selected>Hãy chọn</option>
                                 <option value="CNTT">CNTT</option>
                                 <option value="ĐTVT">ĐTVT</option>
+                                <option value="DIEN">ĐIỆN</option>
                             </select>
                         </div>
                         <div class="mb-3">
