update vien dien

--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -94,10 +94,10 @@
 
     <div class="main container-fluid">
         <div class="card text-dark border-success bg-warning">
-            <div class="card-header">Get MSTeams Code v1.2.211108</div>
+            <div class="card-header">Get MSTeams Code v1.2.20220212</div>
             <div class="card-body">
                 <h5 class="card-title"><b>Công cụ lấy code Teams theo mã lớp</b></h5>
-                <p class="card-text">Hiện chỉ hỗ trợ viện CNTT và ĐTVT, lất mã lớp để tra HP bằng QLĐT.
+                <p class="card-text">Hiện chỉ hỗ trợ viện CNTT, Điện và ĐTVT, lấy mã lớp để tra HP bằng QLĐT hoặc file excel.
                     <br>Chọn kỳ học (các kỳ online gần đây bao gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không
                     phải tất cả đều tìm được code (chỉ có link).
                 </p>
