update vien dien

--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                 <div class="content-range" id="experience">
                     <div class="main-title"><i class="fas fa-play"></i> EXPERIENCE</div>
                     <div class=content-main> 
-                        <p> <b><i class="fas fa-history"></i> akaBot </b> </p>
+                        <p> <b><i class="fas fa-history"></i> akaBot - Robotic Process Automation Services and Products </b> </p>
                         <p> <i class="fas fa-code-branch"></i>  <i> RPA Developer</i>
                         <p> <i class="fas fa-tasks"></i> Ubot Invoice
+                        <p> <i class="fa-solid fa-star"></i> Rookie - Great effort and contribution in 2021
                         <p>Duration: 10/2021-Now</p>
                     </div>
                     <div class=content-main> 
