--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -2,10 +2,10 @@
 <html lang="vi">
 
 <head>
-    <title>SET | GetTeamsCode</title>
+    <title>HUST | GetTeamsCode</title>
     <link rel="icon" href="/static/img/logo.png">
     <meta charset="utf-8" />
-    <meta name="description" content="Công cụ lấy code lớp MSTeams các mã lớp viện ĐTVT.">
+    <meta name="description" content="Công cụ lấy code lớp MSTeams theo mã lớp, HP viện ĐTVT, Điện, CNTT.">
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
     <meta property="og:image" content="/static/img/thumb.png">
