--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -148,7 +148,7 @@
                     </form>
                     </div>
                 </div>
-
+                <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fluuvanduc.work%2Fget-teams-code.html&count_bg=%2379C83D&title_bg=%23555555&icon=firefoxbrowser.svg&icon_color=%23E7E7E7&title=access&edge_flat=true"/></a>
             </div>
         </div>
     </div>
