--- a/index.html
+++ b/index.html
@@ -387,14 +387,14 @@
                         <p>
                             <b> <i class="fas fa-graduation-cap"></i> THPT Chuyen Thai Nguyen</b><br>
                         
-                        Major: Information Tecnology<br>
+                        Major: Information Technology<br>
                         8/2014 – 6/2017</p>
                     </div>
                     <div class=content> 
                         <p>
                             <b> <i class="fas fa-graduation-cap"></i> Hanoi University of Science and Technology</b><br>
                         Major:  Electronic and Telecommunications<br>
-                        CPA: 2.52<br>
+                        CPA: 2.61<br>
                         8/2017 - Now</p>
                     </div>
                 </div>
