--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -94,10 +94,10 @@
 
     <div class="main container-fluid">
         <div class="card text-dark border-success bg-warning">
-            <div class="card-header">Get MSTeams Code v2.1.220321</div>
+            <div class="card-header">Get MSTeams Code v2.1.220407</div>
             <div class="card-body">
                 <h5 class="card-title"><b>Công cụ lấy code Teams theo mã lớp</b></h5>
-                <p class="card-text">Hiện chỉ hỗ trợ viện CNTT, Điện và ĐTVT (lh qua fb để mình mở thêm), hỗ trợ tra bằng mã lớp hoặc mã HP.
+                <p class="card-text">Hiện chỉ hỗ trợ viện CNTT, Điện, Cơ khí và ĐTVT (lh qua fb để mình mở thêm), hỗ trợ tra bằng mã lớp hoặc mã HP.
                     <br>Chọn kỳ học (các kỳ online gần đây bao gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không
                     phải tất cả đều tìm được code (chỉ có link).
                 </p>
@@ -113,6 +113,7 @@
                                     <option value="CNTT">CNTT</option>
                                     <option value="ĐTVT">ĐTVT</option>
                                     <option value="DIEN">ĐIỆN</option>
+                                    <option value="CKHI">CƠ KHÍ</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
