--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -114,6 +114,7 @@
                                     <option value="ĐTVT">ĐTVT</option>
                                     <option value="DIEN">ĐIỆN</option>
                                     <option value="CKHI">CƠ KHÍ</option>
+                                    <option value="SAMI">TOÁN ỨNG DỤNG</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
