--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -97,7 +97,7 @@
             <div class="card-header">Get MSTeams Code v2.1.220407</div>
             <div class="card-body">
                 <h5 class="card-title"><b>Công cụ lấy code Teams theo mã lớp</b></h5>
-                <p class="card-text">Hiện chỉ hỗ trợ khoa Toán, CNTT, Điện, Cơ khí và ĐTVT (lh qua fb để mình mở thêm), hỗ trợ tra bằng mã lớp hoặc mã HP.
+                <p class="card-text">Hiện chỉ hỗ trợ khoa Toán, CNTT, Điện, và ĐTVT (lh qua fb để mình mở thêm), hỗ trợ tra bằng mã lớp hoặc mã HP.
                     <br>Chọn kỳ học (các kỳ online gần đây bao gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không
                     phải tất cả đều tìm được code (chỉ có link).
                 </p>
@@ -125,6 +125,7 @@
                                     <option value="20202">20202</option>
                                     <option value="20203">20203</option>
                                     <option value="20211">20211</option>
+                                    <option value="20212">20212</option>
                                 </select>
                             </div>
                             <div class="col-md-6">
