--- a/get-teams-code.html
+++ b/get-teams-code.html
@@ -94,10 +94,10 @@
 
     <div class="main container-fluid">
         <div class="card text-dark border-success bg-warning">
-            <div class="card-header">Get MSTeams Code v2.1.220407</div>
+            <div class="card-header">Get MSTeams Code v2.2.220417</div>
             <div class="card-body">
                 <h5 class="card-title"><b>Công cụ lấy code Teams theo mã lớp</b></h5>
-                <p class="card-text">Hiện chỉ hỗ trợ khoa Toán, CNTT, Điện, Cơ Khí và ĐTVT (lh qua fb để mình mở thêm), hỗ trợ tra bằng mã lớp hoặc mã HP.
+                <p class="card-text">Hiện chỉ hỗ trợ khoa Toán, CNTT, Điện, Cơ Khí, Sinh phẩm và ĐTVT (lh qua fb để mình mở thêm), hỗ trợ tra bằng mã lớp hoặc mã HP.
                     <br>Chọn kỳ học (các kỳ online gần đây bao gồm 20192, 20202, 20203, 20211) và nhập vào mã lớp, không
                     phải tất cả đều tìm được code (chỉ có link).
                 </p>
@@ -111,10 +111,12 @@
                                 <select id="vien" class="form-select" aria-label="Default select example">
                                     <option selected>Hãy chọn</option>
                                     <option value="CNTT">CNTT</option>
+                                    <option value="CKHI">CƠ KHÍ</option>
                                     <option value="ĐTVT">ĐTVT</option>
                                     <option value="DIEN">ĐIỆN</option>
-                                    <option value="CKHI">CƠ KHÍ</option>
+                                    <option value="SPHAM">SINH PHẨM</option>
                                     <option value="SAMI">TOÁN ỨNG DỤNG</option>
+                                    
                                 </select>
                             </div>
                             <div class="col-md-6">
