--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <button class="btn btn-success"><i class="fab fa-github"></i> GITHUB</button>
                 </a>
                 
-                <a href="https://www.linkedin.com/in/duc-luuvan-pro/" target="_blank">
+                <a href="https://www.linkedin.com/in/ducluuvan/" target="_blank">
                     <button class="btn btn-success"><i class="fab fa-linkedin"></i> LINKEDIN</button>
                 </a>
 
