--- a/van-mau.html
+++ b/van-mau.html
@@ -93,7 +93,7 @@
 
     <div class="main container-fluid">
         <div class="card text-dark border-success bg-warning">
-            <div class="card-header">DucLV.VanMau.20220708</div>
+            <div class="card-header"><b>DucLV.VanMau.20220708</b></div>
             <div class="card-body">
                 <br>
                 <div class="card">
