--- a/van-mau.html
+++ b/van-mau.html
@@ -193,6 +193,33 @@ Bạn chợt nhận ra, câu nói mà người ấy đã nói năm hai mươi tu
                     </div>
                 </div>
                 <br> 
+                <div class="card">
+                    <div class="card-body">
+                        Có một số chuyện, từ bỏ rồi thì có thể bắt đầu lại. Nhưng có một số người, nếu để lỡ rồi thì sẽ lỡ cả cuộc đời.
+                    </div>
+                </div>
+                <br> 
+                <div class="card">
+                    <div class="card-body">
+                        Làm gì có ai vì không có ai đó mà sống không nổi, nhưng mà, có những ngày, thiếu đi ai đó, cảm thấy bản thân muốn cười cũng không cười nổi. Bất chợt, chỉ có thể thở dài…
+                    </div>
+                </div>
+                <br> 
+                <div class="card">
+                    <div class="card-body">
+                        Thỉnh thoảng, trời vẫn đẹp, cây vẫn xanh, hoa vẫn nở, chim vẫn hót…Tức là cuộc sống của chúng ta vẫn thế, chẳng có gì thay đổi cả. Ai bận bịu với việc người nấy, và ít liên quan nhau.
+Thế mà, thỉnh thoảng, anh đã rất nhớ em…
+                    </div>
+                </div>
+                <br> 
+                <div class="card">
+                    <div class="card-body">
+                        Nếu như vận tốc của Hoa Anh Đào rơi hơn 5cm/s chắc có lẽ nó sẽ không đẹp đến như thế.
+Nếu Khoảng cách giữa tôi và em là 5cm thì chắc chỉ cần 1s để đến với em chứ không phải là 1 đời người.
+<br>.....Hoa Anh Đào vẫn rơi.....<br>......Và tôi đã nắm trượt nó....."
+                    </div>
+                </div>
+                <br> 
                 <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fluuvanduc.work%2Fget-teams-code.html&count_bg=%2379C83D&title_bg=%23555555&icon=firefoxbrowser.svg&icon_color=%23E7E7E7&title=access&edge_flat=true"/></a>
             </div>
         </div>
