--- a/van-mau.html
+++ b/van-mau.html
@@ -111,6 +111,18 @@
                 <br>
                 <div class="card">
                     <div class="card-body">
+                        Những ngày ẩm ương, chưa lớn mà cũng chẳng còn nhỏ, có ai chưa từng dõi mắt nhìn theo một ai
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <div class="card-body">
+                        Tôi gửi tình yêu cho mùa hè, nhưng mùa hè không giữ nổi. Mùa hè chỉ biết ra hoa, phượng đỏ sân trường và tiếng ve nỉ non trong lá. Mùa hè ngây ngô, giống như tôi vậy. Nó chẳng làm được những điều tôi kí thác. Nó để Hà Lan đốt tôi, đốt rụi. Trái tim tôi cháy thành tro, rơi vãi trên đường về
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <div class="card-body">
                         Mỗi một chuyến xe là sợi chỉ, đi về mãi dệt thành đời ta<br>
                         Em đưa ta màu buồn cũ kĩ, làm sao ta nhuộm thành trời hoa?
                     </div>
@@ -217,6 +229,18 @@ Thế mà, thỉnh thoảng, anh đã rất nhớ em…
                         Nếu như vận tốc của Hoa Anh Đào rơi hơn 5cm/s chắc có lẽ nó sẽ không đẹp đến như thế.
 Nếu Khoảng cách giữa tôi và em là 5cm thì chắc chỉ cần 1s để đến với em chứ không phải là 1 đời người.
 <br>.....Hoa Anh Đào vẫn rơi.....<br>......Và tôi đã nắm trượt nó....."
+                    </div>
+                </div>
+                <br> 
+                <div class="card">
+                    <div class="card-body">
+                        Trước đây từng nghĩ, nếu thực sự yêu ai đó, tôi sẽ cùng tình yêu đó đi đến cùng trời cuối đất, cho dù người ấy không yêu tôi, tôi vẫn sẽ yêu đến vô cùng. Sự ngông cuồng của tuổi trẻ, chỉ là để hoài niệm. Tình yêu vốn dĩ không đẹp được như thế. Quá nhiều băn khoăn, tiếc nuối, quá nhiều sợ hãi, nỗi đau, quá nhiều nghịch lý, chênh vênh. Rốt cuộc thứ đi cùng ta đến cùng trời cuối đất chỉ còn là nỗi đau
+                    </div>
+                </div>
+                <br> 
+                <div class="card">
+                    <div class="card-body">
+                        Trước đây từng nghĩ, nếu thực sự yêu ai đó, tôi sẽ cùng tình yêu đó đi đến cùng trời cuối đất, cho dù người ấy không yêu tôi, tôi vẫn sẽ yêu đến vô cùng. Sự ngông cuồng của tuổi trẻ, chỉ là để hoài niệm. Tình yêu vốn dĩ không đẹp được như thế. Quá nhiều băn khoăn, tiếc nuối, quá nhiều sợ hãi, nỗi đau, quá nhiều nghịch lý, chênh vênh. Rốt cuộc thứ đi cùng ta đến cùng trời cuối đất chỉ còn là nỗi đau
                     </div>
                 </div>
                 <br> 
