--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 ================================================== -->
 <title>Portfolio | Van Duc Luu</title>
 <meta charset="UTF-8">
-<meta name="description" content="Van Duc, Luu">
-<meta name="keywords" content="personal, vcard, portfolio">
+<meta name="description" content="This is portfolio of me, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
+<meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume">
+<meta property="og:image" content="/images/thumb.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 <!-- Favicon
