--- a/old/index.html
+++ b/old/index.html
@@ -9,6 +9,8 @@
     <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc">
     <meta name="author" content="Đức Lưu Văn">
     <meta property="og:image" content="/static/img/thumb.png">
+    <meta property="og:image:secure_url" content="/static/img/thumb.png">
+
     <link rel="icon" href="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
