--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                     <button class="pull-right site-btn icon hidden-xs">Hire Me <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
                     <div class="hamburger pull-right hidden-lg hidden-md"><i class="fa fa-bars" aria-hidden="false"></i></div>
                     <div class="hidden-md social-icons pull-right"> 
-                        <a class="fb" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
-                        <a class="tw" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a> 
-                        <a class="ins" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a> 
-                        <a class="dr" href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a> 
+                        <a class="fb" href="https://www.facebook.com/duc.luuvan.pro"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+                        <a class="tw" href="https://github.com/luuvanduc1999"><i class="fa fa-github" aria-hidden="true"></i></a> 
+                        <a class="ins" href="https://www.linkedin.com/in/ducluuvan/"><i class="fa fa-linkedin" aria-hidden="true"></i></a> 
+                        <a class="dr" href="https://steamcommunity.com/id/voldemortvn/"><i class="fa fa-steam" aria-hidden="true"></i></a> 
                     </div>
                 </div>
             </div>
