--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 ================================================== -->
 <title>Portfolio | Van Duc Luu</title>
 <meta charset="UTF-8">
-<meta name="description" content="This is portfolio of me, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
+<meta name="description" content="This is portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
 <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume">
 <meta property="og:image" content="https://dustinluu.com/images/thumb.png">
+<meta property="og:url" content="DUSTINLUU.COM">
+<meta property="og:type" content="profile:dustin,duc">
+<meta property="og:title" content="Portfolio | Van Duc Luu">
+<meta property="og:description" content="This is portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
 <meta property="og:image:secure_url" content="https://dustinluu.com/images/thumb.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
