--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li><p><span>Facebook:</span> duc.luuvan.pro</p></li>
         </ul>
         <div class="col-md-12">
-            <button class="site-btn icon">DOWNLOAD MY CV <i class="fa fa-download" aria-hidden="true"></i></button>
+            <button class="site-btn icon" onclick="location.href ='/files/CV_LuuVanDuc.pdf'">DOWNLOAD MY CV <i class="fa fa-download" aria-hidden="true"></i></button>
         </div>
     </div>
 </div>
