--- a/wedding-real.html
+++ b/wedding-real.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="https://dustinluu.com/images/date.png">
 <meta property="og:url" content="DUSTINLUU.COM">
 <meta property="og:type" content="profile:dustin,duc">
-<meta property="og:title" content="YOU ARE INVITED TO DUSTIN'S WEDDING>
+<meta property="og:title" content="YOU ARE INVITED TO DUSTIN'S WEDDING">
 <meta property="og:description" content="The beginning of forever">
 <meta property="og:image:secure_url" content="https://dustinluu.com/images/date.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
