--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!-- Simple Page Needs
 ================================================== -->
-<title>Review phim : Avengers</title>
+<title>Portfolio | Duc Luu Van</title>
 <meta charset="UTF-8">
 <meta name="description" content="This is portfolio of Dustin, an engineer from Hanoi University of Science and Technology, looking for work as Developer.">
 <meta name="keywords" content="Lưu Văn Đức, Đức Lưu Văn, 1999, Luu Van Duc, Java, Resume">
