--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="profile">
         <div class="profile-name">
             <span class="name">Van Duc, Luu</span><br>
-            <span class="job">RPA Developer</span>
+            <span class="job">Java Backend, RPA Developer</span>
         </div>
         <figure class="profile-image">
             <img src="images/profile.png" alt="">
@@ -130,11 +130,11 @@
                 <div class="row">
                     <section class="about-me line col-md-12 padding_30 padbot_45">
                     <div class="section-title"><span></span><h2>About Me</h2></div>
-                    <p class="top_30">I am a Vietnamese RPA Developer at akaBot, a company that provides RPA solutions for businesses. I'm a graduate of the Hanoi University of Science and Technology, where I studied Electronics and Telecommunications. My passion is about using RPA to automate business processes and improve efficiency. 
+                    <p class="top_30">I am a Vietnamese developer at akaBot, a company that provides Automation solutions for businesses. I'm a graduate of the Hanoi University of Science and Technology, where I studied Electronics and Telecommunications. My passion is about using RPA to automate business processes and improve efficiency. 
                         <br>
                         Some additional :
                         <br>
-                        - 2-YOE at RPA Developer for UBot Invoice Product
+                        - 2-YOE at RPA and Java Backend for UBot Invoice Product
                         <br>
                         - Knowledge of data structures and algorithms
                         <br>
@@ -157,7 +157,7 @@
                                 <ul class="timeline col-md-12 top_30">
                                     <li><i class="fa fa-suitcase" aria-hidden="true"></i><h2 class="timeline-title">Working History</h2></li>
                                     <!-- a work -->
-                                    <li><h3 class="line-title">RPA Developer - akaBot RPA Products</h3>
+                                    <li><h3 class="line-title">Java Backend, RPA Developer - akaBot RPA Products</h3>
                                         <span>2021 - Present</span>
                                         <p class="little-text">Working in UBot Teams as a developer for Invoice Processing project</p>
                                     </li>
@@ -214,7 +214,7 @@
                                 <div class="icon">
                                     <i class="fa-brands fa-html5"></i>
                                 </div>
-                                <span class="title">Web Development</span>
+                                <span class="title">Java Web Development</span>
                                 <p class="little-text">I have been working as web backend developer for 5 years.</p>
                             </div>
                         </div>
